k8s/myapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  namespace: my-apps
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
